# pp_aufg1_rockel

./: CMakeLists.txt
examples/: main.cpp
files/: output.txt  test1.txt  test2.txt  test3.txt  test4.txt  test6.txt
include/: DIMACS_einlesen.hpp  SAT.hpp  backtracking.hpp  belegung_wahr.hpp  klausel.hpp  typedef.hpp  variable.hpp  wahrheitsbelegung.hpp
src/: DIMACS_einlesen.cpp  SAT.cpp  backtracking.cpp  belegung_wahr.cpp  klausel.cpp  variable.cpp  wahrheitsbelegung.cpp
